--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,11 @@ Flask==1.0.2
 peewee==3.5.2
 redis==2.10.6
 celery==4.2.0
-enum34
-wtforms
-boto3
-Pillow
-requests
+enum34==1.1.6
+WTForms==2.2.1
+boto3==1.7.69
+Pillow==5.2.0
+requests==2.19.1
 Fabric==2.2.2
 MySQL-python==1.2.5
 gunicorn==19.9.0
